--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,19 +1,19 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.3",
-    "mongoose": "^8.2.2"
-  },
   "name": "backend",
   "version": "1.0.0",
-  "main": "main.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.2"
+  },
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
